--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 title: Welcome to Lauren-Clark's homepage!
 description: Feel free to bookmark this page to keep an eye on my project updates!
